# PTv3-for-detecting-anatomical-landmarks-in-dentistry

./: README.md  pyproject.toml  train.py
config/paths/: paths.yaml
config/training/: training.yaml
src/data_proc/: TLDataset.py  data_helpers.py
src/lightning_logging/: TeethLandLogger.py  callbacks.py  metrics.py
src/lightning_modules/: TeethLandmarksDetector.py
src/modeling/: build_decoder.py  build_encoder.py  common.py  mlp_decoder.py  point_unet.py  ptv3.py
src/modeling/serialization/: hilbert.py
src/postprocessing/: nms.py
